# clMF

./: .appveyor.yml  .gitignore  .travis-opencl-install.sh  .travis.yml  CMakeLists.txt  appveyor.yml  sonar-project.properties
.ci/: amdappsdk_install.sh  cmake_install.sh
cmake/: FindOpenCL.cmake
data/a/: a.py  a_compress.py  meta
data/b/: b.py  b_compress.py  meta
data/c/: c.py  c_compress.py  meta
data/simple/: meta  simple_compress.py
data/toy_example/: toy_example_compress.py
data/tricky_simple/: meta  tricky_simple.test  tricky_simple_compress.py
kcode/: ALS.cl  ALS_rolled.cl  clang_compile.sh  clang_compile_2.sh
scripts/: amdappsdk_install.sh  basic_test_cpu.sh  basic_test_gpu.sh  cmake_install.sh  intel_opencl_install.sh  opencl_install.sh
src/: ALS.cl  OpenCL.cpp  cj.cpp  cj.h  clmf.cpp  clmf.h  clmf_ocl.cpp  clmf_ocl.h  clmf_ref.cpp  clmf_ref.h  extra.cpp  extra.h  main.cpp  pmf.h  pmf_util.h  tools.cpp  tools.h  util.cpp  util.h
